nav and header static, fixed other views to account for shift

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@ html {
 body {
   position: relative;
   height: 100%;
+  // width: 100%;
 }
 
 .App {
@@ -14,6 +15,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   height: 100vh;
+  width: 100vw;
   overflow: scroll;
 }
 
@@ -74,7 +76,7 @@ body {
   }
 
   .wrapper {
-    flex: 2;
+    // flex: 1;
     flex-wrap: wrap;
     flex-direction: row;
     margin: 0;
