--- a/src/components/Header/NavMenu.scss
+++ b/src/components/Header/NavMenu.scss
@@ -96,6 +96,7 @@
   align-items: center;
   background-color: #0c0063;
   position: fixed;
+  z-index: 10;
 }
 
 .menu-icon {
