--- a/src/components/NewFrenmoForm/NewFrenmoForm.scss
+++ b/src/components/NewFrenmoForm/NewFrenmoForm.scss
@@ -3,6 +3,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  margin-top: 12vh;
 
   &__Buttons {
     display: flex;
@@ -57,7 +58,7 @@
 }
 .NewFrenmoPage__header {
   padding: 20px;
-  font-family: 'Cantarell', sans-serif;
+  font-family: "Cantarell", sans-serif;
   color: #0c0063;
 }
 .NewFrenmoForm__input-container {
@@ -69,8 +70,7 @@
   border-radius: 15px 0;
   background-color: lightblue;
   color: #0c0063;
-  font-family: 'Helvetica Neue',
-    sans-serif;
+  font-family: "Helvetica Neue", sans-serif;
   font-weight: bold;
 }
 
@@ -81,8 +81,7 @@
   &::placeholder {
     letter-spacing: 1px;
     font-size: 12px;
-    font-family: 'Helvetica Neue',
-      sans-serif;
+    font-family: "Helvetica Neue", sans-serif;
     text-align: left;
   }
 }
