--- a/src/components/RegistrationForm/RegistrationForm.scss
+++ b/src/components/RegistrationForm/RegistrationForm.scss
@@ -1,12 +1,13 @@
 .RegForm {
   display: flex;
   flex-direction: column;
-  height: 50vh;
+
   justify-content: flex-end;
   align-items: center;
   margin-left: auto;
   margin-right: auto;
   min-height: max-content;
+  margin-top: 20vh;
 
   &__alert {
     text-align: center;
@@ -22,19 +23,4 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 20px;
-}
-@media (min-width: 768px) {
-  .RegForm {
-    height: 30vh;
-  }
-}
-@media (min-width: 1024px) {
-  .RegForm {
-    height: 20vh;
-  }
-}
-@media (min-width: 1440px) {
-  .RegForm {
-    height: 2vh;
-  }
 }
