--- a/src/components/Splash/Splash.scss
+++ b/src/components/Splash/Splash.scss
@@ -1,6 +1,6 @@
 .Splash {
-  height: 100%;
-  margin: 10px;
+  height: 100vh;
+  margin: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,7 +11,7 @@
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
   }
 
   &__hero {
@@ -80,12 +80,10 @@
   padding: 70px;
 }
 @media (min-width: 1024px) {
-  .Splash__wrap {
-    width: 1200px;
-  }
   .splash-image {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    margin-top: 10vh;
   }
 }
