--- a/src/routes/FrenmoDashboard/FrenmoDashboard.scss
+++ b/src/routes/FrenmoDashboard/FrenmoDashboard.scss
@@ -1,18 +1,21 @@
 .Dashboard {
   display: flex;
   flex-direction: row;
-  width: 90vw;
+  width: 100vw;
   overflow: scroll;
   justify-content: flex-start;
   align-items: center;
   margin: 10px;
   padding: 10px;
 
+  &__link {
+    margin-top: 10vh;
+    padding: 0;
+  }
   &__link-selected {
     padding: 10px;
     background-color: #0c0063;
     border-radius: 15px 0;
-    margin-top: 10vh;
   }
 
   &::-webkit-scrollbar {
@@ -47,7 +50,6 @@
     width: 80px;
     height: 80px;
     position: relative;
-    margin-top: 10vh;
   }
 
   &__link:visited {
@@ -132,11 +134,16 @@
   .Dashboard {
     flex-direction: column;
     justify-content: flex-start;
-    height: 90vh;
+    height: 100vh;
     width: 25%;
     padding: 0;
-    margin-top: 0;
-    margin-left: 25%;
+    margin: 0;
+    margin-left: 28%;
+
+    &__link {
+      margin: 0;
+      padding: 0;
+    }
 
     &::-webkit-scrollbar {
       width: 12px;
@@ -154,6 +161,7 @@
       width: 100%;
       background: lightblue;
       color: #0c0063;
+      margin-top: 10vh;
     }
     &__link-selected {
       padding: 0px;
@@ -170,7 +178,7 @@
       color: #0c0063;
       width: 100%;
       padding: 30px;
-      margin: 0px;
+      margin: 0;
       font-family: "Cantarell", sans-serif;
       letter-spacing: 2px;
 
@@ -179,7 +187,6 @@
         color: white;
         width: 100%;
         height: 100%;
-        padding: 30px;
         margin: 0px;
       }
     }
