--- a/src/routes/FrenmoListByCat/FrenmoListByCat.scss
+++ b/src/routes/FrenmoListByCat/FrenmoListByCat.scss
@@ -42,7 +42,7 @@
 
 @media (min-width: 1440px) {
   .FrenmoListByCat__Buttons {
-    margin-top: 20px;
+    margin-top: 15vh;
     margin-left: 5%;
     width: 45vw;
   }
