--- a/src/routes/Friends/Friend.scss
+++ b/src/routes/Friends/Friend.scss
@@ -13,6 +13,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   padding: 20px;
+  margin-top: 12vh;
 }
 
 .friends-buttons {
@@ -25,7 +26,6 @@
   font-weight: bold;
   border-radius: 55px 0;
   background-color: #0c0063;
-
   margin: 10px;
   box-shadow: 15px 15px 15px lightblue;
   display: flex;
